# ZORA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  zora_main.py
TEST/: project.json
TEST/analysis/: analysis.txt
TEST/sequences/: 21bef58a.fasta  9eac7e25.fasta
plugins/: example_plugin.py
test_data/: README_TEST_DATA.md  alignment_test.fasta  crispr_target.fasta  reference_brca1.fasta  synthetic_snp_test.fasta
zora/: __init__.py  core.py  docking.py  models.py  project.py  utils.py  workers.py
