[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zora-bio"
version = "1.0.0"
description = "ZORA - Sequence & Mutation Analysis Workstation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Veera Rahul" },
]
keywords = [
    "bioinformatics", "genomics", "sequence-analysis",
    "mutation-detection", "crispr", "molecular-docking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "matplotlib",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/veera-r/zora"
Repository = "https://github.com/veera-r/zora"

[project.scripts]
zora = "zora_main:main"

[tool.setuptools.packages.find]
include = ["zora*"]
